[tool.poetry]
name = "test-my-module"
version = "2020.12.6"
description = "Small Python testing framework"
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
Pycco = "^0.6.0"
pytest-xdist = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
